k8s/environment/common/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-custom
  namespace: argocd
  annotations:
    # This annotation ensures that the /rabbitmq prefix is removed before forwarding to the pod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # This tells Nginx to preserve the original URL for redirect purposes
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /argocd(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: realchat-argocd-server
            port:
              number: 80
